app/assets/stylesheets/users.scss
// Place all the styles related to the user controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.portfolio-item {
  margin-bottom: 10px;
  font-family: Ubuntu,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.42857143;
  color: #333;
}
.portfolio-item a {
  display: block;
  min-height: 150px;
  background-color: #f8f8f8;
  border-radius: 10px;
}
// hack job setting width to 250px so that I can position delete button correctly for everyone
.profile-image {
  float: left;
  overflow: hidden;
  padding: 5px;
  width: 250px;
}
// need to refactor the black part, overriding something else at the moment
.user-content {
  overflow: hidden;
  padding-left:15px;
  padding-top: 10px;
  color: black;
}
.user-content.profile {
  width: 30%;
  float: left;
  padding-top: 5px;
}
.user-content h1 {
  text-transform: uppercase;
}
.user-content h3 {
  padding:0;
  margin: 0;
}
// need to change span and header use here
.user-content h4 {
  font-size: 14px;
  margin: 0px
}
.user-content .title {
  color: #777;
  padding-top: 3px;
}
.user-content .name {
  min-height: 52px;
}
//for aligning image horizontally
.user-image {
  background-color: #000;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  text-align: center;
  padding-top: 0px;
  padding-left: 0px;
  overflow: hidden;
  float: left;
  display: table;
}
//for aligning image vertically
.user-image p {
  display: table-cell;
  vertical-align: middle;
}

#user-email {
  width: 200px;
}
#user-password {
  width: 200px;
}
#user-name {
  width: 200px;
}
#user-age {
  width: 50px;
}
#user-title {
  width: 200px;
}
.filter-image {
  // for chrome safari opera
  -webkit-filter: grayscale(0%);
}

.btn.btn-primary.linkedin {
  background-color: #287bbc;
  border: none;
  height: 40px;
}

.btn.btn-primary.linkedin:hover {
  background-color: #286fbc;
}

// 35% because it seems to be the right point at which the div drops down instead of intruding on text input areas
.linkedin-content {
  width: 35%;
  float: left;
  padding-left: 15px;
}
.btn.btn-primary.delete {
  background-color: #ff0000;
  border: none;
}
.btn.btn-primary.delete:hover {
  background-color: #e50000;
}
.btn.btn-primary.settings {
  background-color: #00b200;
  border: none;
}
.btn.btn-primary.settings:hover {
  background-color: #009900;
}
.btn.btn-primary.stealth {
  background-color: #696969;
  border: none;
}
.btn.btn-primary.stealth:hover {
  background-color: #808080;
}
.linkedin-button {
  float: left;
  clear: both;
}

//padding-left of 265 because standard for all images of width 250px and about 15px of padding between image and user-content.profile
.user-delete {
  padding-top: 50px;
  padding-left: 265px;
  clear: both;
}

.search-field {
  width: 60%;
}

//800px for tablets and phones.
@media all and (max-width:800px)
{
    .user-content.profile, .linkedin-content
    {
        display: block;
        float: none;
        width: 100%;

    }
    .user-delete {
        padding-left: 15px;
    }
    .reset-password input[type="submit"] {
      margin-top: 10px;
    }
}

